# adventofcode2024

./: Cargo.toml  README.md
src/a1/: input.txt  run.rs
src/a10/: run.rs
src/a11/: run.rs
src/a12/: run.rs
src/a13/: run.rs
src/a14/: run.rs
src/a15/: run.rs
src/a16/: run.rs
src/a17/: run.rs
src/a18/: run.rs
src/a19/: run.rs
src/a2/: run.rs
src/a20/: run.rs
src/a3/: run.rs
src/a4/: run.rs
src/a5/: run.rs
src/a6/: run.rs
src/a7/: run.rs
src/a8/: run.rs
src/a9/: run.rs
src/regexexample/: input.txt
