[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.2"
counter = "0.6.0"
itertools = "0.13.0"

[[bin]]
name = "a1"
path = "src/a1/run.rs"

[[bin]]
name = "a2"
path = "src/a2/run.rs"

[[bin]]
name = "a3"
path = "src/a3/run.rs"

[[bin]]
name = "a4"
path = "src/a4/run.rs"

[[bin]]
name = "a5"
path = "src/a5/run.rs"


[[bin]]
name = "regexexample"
path = "src/regexexample/run.rs"
