[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.2"
counter = "0.6.0"
itertools = "0.13.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"

[[bin]]
name = "a1"
path = "src/a1/run.rs"

[[bin]]
name = "a2"
path = "src/a2/run.rs"

[[bin]]
name = "a3"
path = "src/a3/run.rs"

[[bin]]
name = "a4"
path = "src/a4/run.rs"

[[bin]]
name = "a5"
path = "src/a5/run.rs"

[[bin]]
name = "a6"
path = "src/a6/run.rs"

[[bin]]
name = "a7"
path = "src/a7/run.rs"

[[bin]]
name = "a8"
path = "src/a8/run.rs"

[[bin]]
name = "a9"
path = "src/a9/run.rs"

[[bin]]
name = "a10"
path = "src/a10/run.rs"

[[bin]]
name = "a11"
path = "src/a11/run.rs"

[[bin]]
name = "a12"
path = "src/a12/run.rs"

[[bin]]
name = "a13"
path = "src/a13/run.rs"

[[bin]]
name = "a15"
path = "src/a15/run.rs"

[[bin]]
name = "a16"
path = "src/a16/run.rs"

[[bin]]
name = "a17"
path = "src/a17/run.rs"

[[bin]]
name = "a18"
path = "src/a18/run.rs"

[[bin]]
name = "a19"
path = "src/a19/run.rs"

[[bin]]
name = "a20"
path = "src/a20/run.rs"

[[bin]]
name = "regexexample"
path = "src/regexexample/run.rs"

